fixed spacing

--- a/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/CanonicalTag.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/CanonicalTag.less
@@ -2,15 +2,15 @@
   label {
     display: flex;
     font-size: 16px;
-    padding-bottom: 5px;
+    padding-bottom: 8px;
   }
   .settings {
     & > * {
-      padding-bottom: 5px;
+      padding-bottom: 8px;
     }
     .Input {
       width: 90%;
-      margin-top: 5px;
+      margin-top: 8px;
     }
   }
 }
