--- a/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/SitemapPriority.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Meta/ItemSettings/settings/SitemapPriority.less
@@ -2,6 +2,6 @@
   label {
     display: flex;
     font-size: 16px;
-    padding-bottom: 5px;
+    padding-bottom: 8px;
   }
 }
